Added Jiang's external camera support
Able to get video stream from external camera and publish to the stream, however the audio driver still doesn't work

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.BLUETOOTH" />
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
 
     <application
         android:allowBackup="true"
@@ -25,7 +26,10 @@
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>>
+            </intent-filter>
+            <meta-data android:name="FORBID_TOUCH" android:value="true"/>
+            <meta-data android:name="FORBID_PIR" android:value="true"/>
+            <meta-data android:name="forbid_request_semantics" android:value="1"/>
         </activity>
         <activity
             android:name=".CallActivity"
@@ -33,7 +37,13 @@
             android:configChanges="orientation"
             android:screenOrientation="landscape"
             android:theme="@style/AppTheme"
-            android:largeHeap="true"/>
+            android:largeHeap="true"
+            android:hardwareAccelerated="true">
+
+            <meta-data android:name="FORBID_TOUCH" android:value="true"/>
+            <meta-data android:name="FORBID_PIR" android:value="true"/>
+            <meta-data android:name="forbid_request_semantics" android:value="1"/>
+        </activity>
     </application>
 
 </manifest>
